2017-11-04  Tuomo Keskitalo  <tuomo.keskitalo@iki.fi>

	* cscal.c: Corrected bug #52336 in cscal.c: Decreased maximum step
	length increase coefficient (now named maxscale) from 5.0 to 4.9
	because value of 5.0 hits a singularity in msbdf stepper with
	order 3, causing a floating point exception. Thanks to Andrew
	Benson for reporting this bug!

2017-10-22  Tuomo Keskitalo  <tuomo.keskitalo@iki.fi>

	* msadams.c: Corrected bug #52230 in msadams_apply, where solver
	crashed to order change -2 error. This could happen in a very rare
	case when two consecutive failed steps suggest decreasing
	order. Fix is to reset solver if that happens. Thanks for Michael
	Kaufman for reporting this bug and testing the fix!

2013-06-08  Tuomo Keskitalo  <tuomo.keskitalo@iki.fi>

	* driver.c: Removed redundant if clause. Thanks to
	David Binderman for the report!
	
2013-01-27  Tuomo Keskitalo  <tuomo.keskitalo@iki.fi>

	* msbdf.c: Corrected bug which enabled order to be changed 
	by two (first by stability enhancement, then by order evaluation
	after a rejected step). Thanks for Frantisek Kluknavsky and
	Andreas Schwab for bug reports!
	
	* msbdf.c: Added more state variables explicitly to be reset in 
	msbdf_reset. 

	*msbdf.c: Added abscorscaled to remove division of abscor for 
	use in msbdf_eval_order and subsequent backwards multiplication.
	
	*test.c: test_extreme_problems: Increased ringmod case tolerances 
	from 1e-7 to 1e-12 to increase precision. Because that
	increases computational burden, I also decreased end time 
	from 1e-3 to 1e-5. That decreased the acidity of the test 
	significantly, but the test case is now more appropriate 
	for normal "make check". Thanks for Frantisek Kluknavsky
	for pointing out bad design of the test case.

2012-09-10  Rhys Ulerich  <rhys.ulerich@gmail.com>

	* test.c: Correct two out-of-order declarations.
	Thanks to Brian Gladman for spotting the problem.

2012-03-10  Tuomo Keskitalo  <tuomo.keskitalo@iki.fi>
